@@ -2,10 +2,9 @@ package base;
 
 import java.io.IOException;
 import java.net.URI;
-
-import jdk.incubator.http.HttpClient;
-import jdk.incubator.http.HttpRequest;
-import jdk.incubator.http.HttpResponse;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 public class Test {
 	
@@ -14,7 +13,9 @@ public class Test {
         HttpRequest request = HttpRequest.newBuilder(URI.create("http://www.baidu.com")).GET().build();
         HttpResponse<String> response;
 		try {
-			response = client.send(request, HttpResponse.BodyHandler.asString());
+			Long aLong = System.nanoTime();
+			response = client.send(request, HttpResponse.BodyHandlers.ofString());
+			System.out.println(System.nanoTime() -aLong);
 			System.out.println(response.statusCode());
 		} catch (IOException e) {
 			e.printStackTrace();
